Small adjustments to styles on search, fix spacing issues on results

--- a/public/base.css
+++ b/public/base.css
@@ -5,10 +5,14 @@
 }
 
 html, body, .view {
+  margin: 0;
+  padding: 0;
   height: 100%;
   width: 100%;
   color: silver;
-  margin: 0;
+}
+
+html {
   background-image: url('https://static.pexels.com/photos/30222/pexels-photo-30222.jpg');
   background-repeat: repeat-y;
   background-size: cover;
@@ -31,12 +35,12 @@ input[type="text"] {
   display: block;
   margin: 0;
   width: 100%;
-  height: 21px;
+  height: 20px;
   font-family: sans-serif;
   font-size: 18px;
   appearance: none;
   box-shadow: none;
-  border-radius: none;
+  border-radius: 3px;
   margin: 10px;
   padding: 10px;
   border: solid 1px #dcdcdc;
@@ -54,19 +58,21 @@ input[type="text"], textarea {
 }
 
 button {
-  width: 15%
   color: silver;
   font-size: 18px;
   text-align: center;
+  background-color: dimgrey;
   opacity: 0.8;
-  padding: 10px;
+  padding: 8px 30px 8px 30px;
   border: solid 1px #dcdcdc;
-  transition: box-shadow 0.3s, border 0.3s;
+  border-radius: 3px;
+  transition: color: 0.3s, box-shadow: 0.3s, broder: 0.3s;
 }
 
 button:hover {
+  color: black;
   border: solid 1px #707070;
-  box-shadow: 0 0 5px 1px #969696;
+  box-shadow: 0 0 6px black, 0 0 10px black;
   cursor: pointer;
 }
 
@@ -98,7 +104,7 @@ button:hover {
 }
 
 .results form {
-  margin: 5px;
+  /*margin: 5px;*/
 }
 
 .results button {
@@ -111,6 +117,8 @@ button:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  top: 0;
+  position: fixed;
 }
 
 .artistsContainer {
@@ -118,6 +126,11 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-top: 65px;
+}
+
+.artist {
+  margin: 20px auto 20px auto;
 }
 
 .artist:hover {
